--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section>
                 <ul>
             <li>
-                <img src="./images/img(4).jpg" width="360" height="360" alt="taxi">
+                <img src="./images/img(4).jpg" width="360" height="360" alt="taxii">
                 <h3>Taxi Service</h3>
                 <p>Marketing</p>
             </li>
