--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="tatel">Our Portfolio</h2>
         <ul>
             <li>
                 <img src="./images/img.jpg" width="360" height="300" alt="telroz">
