--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles.css"
     <title>Document</title>
 </head>
 <body class="body">
-    <section>
+    <section class="section">
         <h2 class="tatel">Our Portfolio</h2>
         <ul>
             <li>
