--- a/index.html
+++ b/index.html
@@ -1,49 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="styles.css"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body class="body">
-    <section class="section">
-        <h2 class="tatel">Our Portfolio</h2>
+<header>
+    <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-            <li>
-                <img src="./images/img.jpg" width="360" height="300" alt="telroz">
-                <h3>Banking App</h3>
-                <p>App</p>
-            </li>
-            <li>
-                <img src="./images/img(1).jpg" width="360" height="300" alt="nvstel">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/img(3).jpg" width="360" height="300" alt="ps">
-                <h3>Meditation App</h3>
-                <p>App</p>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+    </nav>
+    <address>
+        <ul>
+            <li> <a href="mailto:info@devstudio.com" target="_blank"
+                    rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
             </li>
         </ul>
-             </section>
-            <section>
-                <ul>
+    </address>
+</header>
+<main>
+    <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+    </section>
+    <section>
+        <h2 hidden>Features</h2>
+        <ul>
             <li>
-                <img src="./images/img(4).jpg" width="360" height="360" alt="taxii">
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
+                <h3>Strategy</h3>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <img src="./images/img(2).jpg" width="360" height="360" alt="telmini">
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
-            </li><li>
-                <img src="./images/img(5).jpg" width="360" height="360" alt="gyorl">
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                </p>
+            </li>
+            <li>
+                <h3>Diligence</h3>
+                <p> Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </p>
             </li>
         </ul>
     </section>
-</body>
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/images/img3.jpg" width="264" height="260" alt="man beard">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/images/man2.jpg" width="264" height="260" alt="man smeal">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+    <body class="body">
+        <section class="section">
+            <h2 class="tatel">Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/img.jpg" width="360" height="300" alt="telroz">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/img(1).jpg" width="360" height="300" alt="nvstel">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img(3).jpg" width="360" height="300" alt="ps">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li>
+                    <img src="./images/img(4).jpg" width="360" height="360" alt="taxii">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img(2).jpg" width="360" height="360" alt="telmini">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/img(5).jpg" width="360" height="360" alt="gyorl">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
+    </body>
+</main>
+<footer>
+    <a href="./index.html">WebStudio</a>
+    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
+
 </html>
