--- a/index.html
+++ b/index.html
@@ -1,87 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<header>
-    <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+<header class="header">
+    <nav class="nav-menu">
+        <a class="WebStudio" href="./index.html">Web<span class="Studio">Studio</span></a>
+        <ul class="menu-heder">
+            <li><a class="menu-heder" href="">Studio</a></li>
+            <li><a class="menu-heder" href="">Portfolio</a></li>
+            <li><a class="menu-heder" href="">Contacts</a></li>
         </ul>
     </nav>
-    <address>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com" target="_blank"
+    <address class="address">
+        <ul class="address-ul">
+            <li> <a class="address-malito" href="mailto:info@devstudio.com" target="_blank"
                     rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
+            <li><a class="address-tel"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
 </header>
-<main>
-    <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+<main class="main">
+    <section class=" main-section">
+        <h1 class="Effective">Effective Solutions for Your Business</h1>
+        <button class="button-Order-Service" type="button">Order Service</button>
     </section>
-    <section>
+    <section class="section-2">
         <h2 hidden>Features</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        <ul class="spdt-ul">
+            <li class="spdt-spdt-p">
+                <h3 class="spdt">Strategy</h3>
+                <p class="spdt-p"  >Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                <h3 class="spdt" >Punctuality</h3>
+                <p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li>
-                <h3>Diligence</h3>
-                <p> Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <h3 class="spdt" >Diligence</h3>
+                <p class="spdt-p"> Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                <h3 class="spdt" >Technologies</h3>
+                <p class="spdt-p" >Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
             </li>
         </ul>
     </section>
     <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+        <h2 class="Team">Our Team</h2>
+        <ul class="Team-ul">
+            <li class="eam-li">
                 <img src="./images/images/img3.jpg" width="264" height="260" alt="man beard">
-                <h3>Mark Guerrero</h3>
+                <h3 class="Team-man">Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
                 <img src="./images/images/man2.jpg" width="264" height="260" alt="man smeal">
-                <h3>Tom Ford</h3>
+                <h3 class="Team-man">Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
-                <h3>Camila Garcia</h3>
+                <h3 class="Team-man" >Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
                 <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
-                <h3>Daniel Wilson</h3>
+                <h3 class="Team-man">Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
         </ul>
     </section>
-    <body class="body">
-        <section class="section">
-            <h2 class="tatel">Our Portfolio</h2>
+    <body>
+        <section class="">
+            <h2 class="">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/img.jpg" width="360" height="300" alt="telroz">
