--- a/index.html
+++ b/index.html
@@ -53,68 +53,68 @@
             </li>
         </ul>
     </section>
-    <section>
+    <section class="section-3">
         <h2 class="Team">Our Team</h2>
         <ul class="Team-ul">
             <li class="eam-li">
                 <img src="./images/images/img3.jpg" width="264" height="260" alt="man beard">
                 <h3 class="Team-man">Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <p class="hu">Product Designer</p>
             </li>
             <li>
                 <img src="./images/images/man2.jpg" width="264" height="260" alt="man smeal">
                 <h3 class="Team-man">Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <p class="hu" >Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
                 <h3 class="Team-man" >Camila Garcia</h3>
-                <p>Marketing</p>
+                <p class="hu" >Marketing</p>
             </li>
             <li>
                 <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
                 <h3 class="Team-man">Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <p class="hu" >UI Designer</p>
             </li>
         </ul>
     </section>
     <body>
-        <section class="">
-            <h2 class="">Our Portfolio</h2>
-            <ul>
-                <li>
+        <section class="section-4">
+            <h2 class="Our">Our Portfolio</h2>
+            <ul class="Our-ul">
+                <li class="Our-li">
                     <img src="./images/img.jpg" width="360" height="300" alt="telroz">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="bcm" >Banking App</h3>
+                    <p class="amm">App</p>
                 </li>
                 <li>
                     <img src="./images/img(1).jpg" width="360" height="300" alt="nvstel">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="bcm"  >Cashless Payment</h3>
+                    <p class="amm" >Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img(3).jpg" width="360" height="300" alt="ps">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="bcm"  >Meditation App</h3>
+                    <p class="amm" >App</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <ul>
-                <li>
+        <section class="section-5">
+            <ul class="section-5-ul">
+                <li class="section-5-li">
                     <img src="./images/img(4).jpg" width="360" height="360" alt="taxii">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="bcm" >Taxi Service</h3>
+                    <p class="amm" >Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img(2).jpg" width="360" height="360" alt="telmini">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="bcm" >Screen Illustrations</h3>
+                    <p class="amm" >Design</p>
                 </li>
                 <li>
                     <img src="./images/img(5).jpg" width="360" height="360" alt="gyorl">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="bcm" >Online Courses</h3>
+                    <p class="amm" >Marketing</p>
                 </li>
             </ul>
         </section>
