--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
         </section>
     </body>
 </main>
-<footer>
-    <a href="./index.html">WebStudio</a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+<footer class="footer">
+    <a class="WebStudio" href="./index.html">Web<span class="Studio">Studio</span></a>
+    <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
-
 </html>
