--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         rel="stylesheet">
         <title>Document</title>
 </head>
+<body class="bodyz">
 <header class="header">
     <nav class="nav-menu">
         <a class="WebStudio" href="./index.html">Web<span class="Studio">Studio</span></a>
         <ul class="menu-heder">
-            <li><a class="menu-heder" href="">Studio</a></li>
-            <li><a class="menu-heder" href="">Portfolio</a></li>
-            <li><a class="menu-heder" href="">Contacts</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Studio</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Portfolio</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="address">
@@ -30,7 +31,7 @@
 </header>
 <main class="main">
     <section class=" main-section">
-        <h1 class="Effective">Effective Solutions for Your Business</h1>
+        <h1 class="effectiv">Effective Solutions for Your Business</h1>
         <button class="button-Order-Service" type="button">Order Service</button>
     </section>
     <section class="section-2">
@@ -82,7 +83,6 @@
             </li>
         </ul>
     </section>
-    <body class="bodyz">
         <section class="section-4">
             <h2 class="Our">Our Portfolio</h2>
             <ul class="Our-ul">
@@ -125,7 +125,8 @@
     </body>
 </main>
 <footer class="footer">
-    <a class="WebStudio" href="./index.html">Web<span class="Studio">Studio</span></a>
+    <a class="webStudio" href="./index.html">Web<span class="studio">Studio</span></a>
     <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
+</body>
 </html>
