--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bodyz">
 <header class="header">
     <nav class="nav-menu">
-        <a class="webStudio" href="./index.html">Web<span class="studio">Studio</span></a>
+        <a class="webstudio" href="./index.html">Web<span class="studio">Studio</span></a>
         <ul class="menu-heder">
             <li class="menu-li"><a class="menu-heder" href="">Studio</a></li>
             <li class="menu-li"><a class="menu-heder" href="">Portfolio</a></li>
@@ -29,7 +29,7 @@
         </ul>
     </address>
 </header>
-<main class="main">
+<main class="mains">
     <section class=" main-section">
         <h1 class="effectiv">Effective Solutions for Your Business</h1>
         <button class="button-Order-Service" type="button">Order Service</button>
