--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </address>
 </header>
 <main class="mains">
-    <section class=" main-section">
+    <section class="main-section">
         <h1 class="effectiv">Effective Solutions for Your Business</h1>
-        <button class="button-Order-Service" type="button">Order Service</button>
+        <button class="button-order-service" type="button">Order Service</button>
     </section>
     <section class="section-2">
         <h2 hidden>Features</h2>
@@ -59,11 +59,11 @@
         </ul>
     </section>
     <section class="section-3">
-        <h2 class="Team">Our Team</h2>
-        <ul class="Team-ul">
+        <h2 class="team">Our Team</h2>
+        <ul class="team-ul">
             <li class="eam-li">
                 <img src="./images/images/img3.jpg" width="264" height="260" alt="man-beard">
-                <h3 class="Team-man">Mark Guerrero</h3>
+                <h3 class="team-man">Mark Guerrero</h3>
                 <p class="hu">Product Designer</p>
             </li>
             <li>
@@ -84,9 +84,9 @@
         </ul>
     </section>
         <section class="section-4">
-            <h2 class="Our">Our Portfolio</h2>
-            <ul class="Our-ul">
-                <li class="Our-li">
+            <h2 class="our">Our Portfolio</h2>
+            <ul class="our-ul">
+                <li class="our-li">
                     <img src="./images/img.jpg" width="360" height="300" alt="telroz">
                     <h3 class="bcm">Banking App</h3>
                     <p class="amm">App</p>
@@ -122,10 +122,10 @@
                 </li>
             </ul>
         </section>
+        </main>
     </body>
-</main>
 <footer class="footer">
-    <a class="webStudio" href="./index.html">Web<span class="studio">Studio</span></a>
+    <a class="webStudio-footer" href="./index.html">Web<span class="webStudio-footer">Studio</span></a>
     <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
