--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
             </ul>
         </section>
         </main>
-    </body>
-<footer class="footer">
+<footer class="foot">
     <a class="webStudio-footer" href="./index.html">Web<span class="webStudio-footer">Studio</span></a>
     <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
