--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
             </li>
             <li>
                 <img src="./images/images/man2.jpg" width="264" height="260" alt="man-smeal">
-                <h3 class="Team-man">Tom Ford</h3>
+                <h3 class="team-man">Tom Ford</h3>
                 <p class="hu">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
-                <h3 class="Team-man">Camila Garcia</h3>
+                <h3 class="team-man">Camila Garcia</h3>
                 <p class="hu">Marketing</p>
             </li>
             <li>
                 <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
-                <h3 class="Team-man">Daniel Wilson</h3>
+                <h3 class="team-man">Daniel Wilson</h3>
                 <p class="hu">UI Designer</p>
             </li>
         </ul>
@@ -101,10 +101,7 @@
                     <h3 class="bcm">Meditation App</h3>
                     <p class="amm" >App</p>
                 </li>
-            </ul>
-        </section>
-        <section class="section-5">
-            <ul class="section-5-ul">
+
                 <li class="section-5-li">
                     <img src="./images/img(4).jpg" width="360" height="360" alt="taxii">
                     <h3 class="bcm">Taxi Service</h3>
@@ -117,14 +114,14 @@
                 </li>
                 <li>
                     <img src="./images/img(5).jpg" width="360" height="360" alt="gyorl">
-                    <h3 class="bcm" >Online Courses</h3>
-                    <p class="amm" >Marketing</p>
+                    <h3 class="bcm">Online Courses</h3>
+                    <p class="amm">Marketing</p>
                 </li>
             </ul>
         </section>
         </main>
 <footer class="foot">
-    <a class="webStudio-footer" href="./index.html">Web<span class="webStudio-footer">Studio</span></a>
+    <a class="webstudio-footer" href="./index.html">Web<span class="studio-footer">Studio</span></a>
     <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
