--- a/index.html
+++ b/index.html
@@ -91,28 +91,27 @@
                     <h3 class="bcm">Banking App</h3>
                     <p class="amm">App</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img2.jpg" width="360" height="300" alt="nvstel">
                     <h3 class="bcm"  >Cashless Payment</h3>
                     <p class="amm" >Marketing</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img3.jpg" width="360" height="300" alt="ps">
                     <h3 class="bcm">Meditation App</h3>
                     <p class="amm" >App</p>
                 </li>
-
-                <li class="section-5-li">
+                <li class="our-li">
                     <img src="./images/images2/img4.jpg" width="360" height="360" alt="taxii">
                     <h3 class="bcm">Taxi Service</h3>
                     <p class="amm">Marketing</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img2.jpg" width="360" height="360" alt="telmini">
                     <h3 class="bcm">Screen Illustrations</h3>
                     <p class="amm">Design</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img5.jpg" width="360" height="360" alt="gyorl">
                     <h3 class="bcm">Online Courses</h3>
                     <p class="amm">Marketing</p>
