--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body class="bodyz">
 <header class="header">
     <nav class="nav-menu">
-        <a class="webstudio" href="./index.html">Web<span class="studio">Studio</span></a>
+        <a class="webstudio" href="https://vashenkos.github.io/goit-markup-hw-02">Web<span class="studio">Studio</span></a>
         <ul class="menu-heder">
-            <li class="./index.html"><a class="menu-heder" href="">Studio</a></li>
-            <li class="./index.html"><a class="menu-heder" href="">Portfolio</a></li>
-            <li class="./index.html"><a class="menu-heder" href="">Contacts</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Studio</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Portfolio</a></li>
+            <li class="menu-li"><a class="menu-heder" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="address">
