--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
@@ -85,7 +85,7 @@
     </section>
         <section class="section-4">
             <h2 class="our">Our Portfolio</h2>
-            <ul class="our-ul">
+            <ul class="team-ul">
                 <li class="our-li">
                     <img src="./images/images2/img.jpg" width="360" height="300" alt="telroz">
                     <h3 class="bcm">Banking App</h3>
