--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="nav-menu">
         <a class="webstudio" href="./index.html">Web<span class="studio">Studio</span></a>
         <ul class="menu-heder">
-            <li class="menu-li"><a class="menu-heder" href="./index.html" href="">Studio</a></li>
+            <li class="menu-li"><a class="menu-heder" href="./index.html">Studio</a></li>
             <li class="menu-li"><a class="menu-heder" href="">Portfolio</a></li>
             <li class="menu-li"><a class="menu-heder" href="">Contacts</a></li>
         </ul>
