--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                 <h3 class="team-man">Mark Guerrero</h3>
                 <p class="hup">Product Designer</p>
             </li>
-            <li>
+            <li class="eam-li">
                 <img src="./images/images/man2.jpg" width="264" height="260" alt="man-smeal">
                 <h3 class="team-man">Tom Ford</h3>
                 <p class="hup">Frontend Developer</p>
             </li>
-            <li>
+            <li class="eam-li">
                 <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
                 <h3 class="team-man">Camila Garcia</h3>
                 <p class="hup">Marketing</p>
             </li>
-            <li>
+            <li class="eam-li">
                 <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
                 <h3 class="team-man">Daniel Wilson</h3>
                 <p class="hup">UI Designer</p>
@@ -101,17 +101,17 @@
                     <h3 class="bcm">Meditation App</h3>
                     <p class="amm" >App</p>
                 </li>
-                <li class="section-5-li">
+                <li class="our-li">
                     <img src="./images/images2/img4.jpg" width="360" height="360" alt="taxii">
                     <h3 class="bcm">Taxi Service</h3>
                     <p class="amm">Marketing</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img2.jpg" width="360" height="360" alt="telmini">
                     <h3 class="bcm">Screen Illustrations</h3>
                     <p class="amm">Design</p>
                 </li>
-                <li>
+                <li class="our-li">
                     <img src="./images/images2/img5.jpg" width="360" height="360" alt="gyorl">
                     <h3 class="bcm">Online Courses</h3>
                     <p class="amm">Marketing</p>
