--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                 <h3 class="spdt">Strategy</h3>
                 <p class="spdt-p"  >Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li>
+            <li class="spdt-spdt-p">
                 <h3 class="spdt" >Punctuality</h3>
                 <p class="spdt-p">Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
-            <li>
+            <li class="spdt-spdt-p">
                 <h3 class="spdt" >Diligence</h3>
                 <p class="spdt-p"> Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.</p>
             </li>
-            <li>
+            <li class="spdt-spdt-p">
                 <h3 class="spdt">Technologies</h3>
                 <p class="spdt-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
