--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
         <title>Document</title>
+        <link rel="stylesheet" href="./css>
 </head>
 <body class="bodyz">
 <header class="header">
