--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
 
-        <link rel="stylesheet" href="./css/Roboto/LICENSE.txt">
+        <link rel="stylesheet" href="https://github.com/Vashenkos/goit-markup-hw-02/tree/main/css">
         <title>Document</title>
 </head>
 <body class="bodyz">
