--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav class="nav-menu">
         <a class="webstudio" href="./index.html">Web<span class="studio">Studio</span></a>
         <ul class="menu-heder-lu">
-            <li class="menu-li"><a class="menu-heder" href="./index.html">Studio</a></li>
-            <li class="menu-li"><a class="menu-heder" href="">Portfolio</a></li>
-            <li class="menu-li"><a class="menu-heder" href="">Contacts</a></li>
+            <li><a class="menu-heder" href="./index.html">Studio</a></li>
+            <li><a class="menu-heder" href="">Portfolio</a></li>
+            <li><a class="menu-heder" href="">Contacts</a></li>
         </ul>
     </nav>
     <address class="address">
