--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
 
-        <link rel="stylesheet" href="https://github.com/Vashenkos/goit-markup-hw-02/blob/main/css/Raleway/Raleway-Italic-VariableFont_wght.ttf/Raleway-VariableFont_wght.ttf/Roboto-Black.ttf/Roboto-BlackItalic.ttf/Roboto-Bold.ttf/Roboto-BoldItalic.ttf/Roboto-Italic.ttf/Roboto-Light.ttf/Roboto-LightItalic.ttf/Roboto-Medium.ttf/Roboto-MediumItalic.ttf/Roboto-Regular.ttf/Roboto-Thin.ttf/Roboto-ThinItalic.ttf">
+        <link rel="stylesheet" href="/css/сss.txt">
         <title>Document</title>
 </head>
 <body class="bodyz">
