--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
             <li class="eam-li">
                 <img src="./images/images/img3.jpg" width="264" height="260" alt="man-beard">
                 <h3 class="team-man">Mark Guerrero</h3>
-                <p class="hup">Product Designer</p>
+                <p class="hup-p">Product Designer</p>
             </li>
             <li class="eam-li">
                 <img src="./images/images/man2.jpg" width="264" height="260" alt="man-smeal">
                 <h3 class="team-man">Tom Ford</h3>
-                <p class="hup">Frontend Developer</p>
+                <p class="hup-p">Frontend Developer</p>
             </li>
             <li class="eam-li">
                 <img src="./images/images/wuman.jpg" width="264" height="260" alt="woman">
                 <h3 class="team-man">Camila Garcia</h3>
-                <p class="hup">Marketing</p>
+                <p class="hup-p">Marketing</p>
             </li>
             <li class="eam-li">
                 <img src="./images/images/man1.jpg" width="264" height="260" alt="man">
                 <h3 class="team-man">Daniel Wilson</h3>
-                <p class="hup">UI Designer</p>
+                <p class="hup-p">UI Designer</p>
             </li>
         </ul>
     </section>
