--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </nav>
     <address class="address">
         <ul class="address-ul">
-            <li class="address-li"> <a class="address-malito" href="mailto:info@devstudio.com" target="_blank"
+            <li class="address-li"> <a class="address-tel-use" href="mailto:info@devstudio.com" target="_blank"
                     rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
-            <li class="address-li"><a class="address-tel"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
+            <li class="address-li"><a class="address-tel-use"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
