--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1 class="effectiv">Effective Solutions for Your Business</h1>
         <button class="button-order-service" type="button">Order Service</button>
     </section>
-    <section class="section-2">
+    <section class="section-two">
         <h2 hidden>Features</h2>
         <ul class="spdt-ul">
             <li class="spdt-spdt-p">
