--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
+
+        <link rel="stylesheet" href="/css/сss.txt">
         <title>Document</title>
 </head>
 <body class="bodyz">
@@ -22,9 +24,9 @@
     </nav>
     <address class="address">
         <ul class="address-ul">
-            <li class="address-li"> <a class="address-tel-use" href="mailto:info@devstudio.com" target="_blank"
+            <li class="address-li"> <a class="address-malito" href="mailto:info@devstudio.com" target="_blank"
                     rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
-            <li class="address-li"><a class="address-tel-use"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
+            <li class="address-li"><a class="address-tel"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
@@ -34,7 +36,7 @@
         <h1 class="effectiv">Effective Solutions for Your Business</h1>
         <button class="button-order-service" type="button">Order Service</button>
     </section>
-    <section class="section-two">
+    <section class="section-2">
         <h2 hidden>Features</h2>
         <ul class="spdt-ul">
             <li class="spdt-spdt-p">
