--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
-
-        <link rel="stylesheet" href="/css/сss.txt">
         <title>Document</title>
 </head>
 <body class="bodyz">
@@ -24,9 +22,9 @@
     </nav>
     <address class="address">
         <ul class="address-ul">
-            <li class="address-li"> <a class="address-malito" href="mailto:info@devstudio.com" target="_blank"
+            <li class="address-li"> <a class="address-use" href="mailto:info@devstudio.com" target="_blank"
                     rel="noopener noreferrer nofollow">info@devstudio.com</a></li>
-            <li class="address-li"><a class="address-tel"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
+            <li class="address-li"><a class="address-use"  href="tel:+110001111111" target="_blank" rel="noopener noreferrer nofollow">+11 (000) 111-11-11</a>
             </li>
         </ul>
     </address>
