--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
         </ul>
     </section>
-    <section class="section-3">
+    <section class="section-three">
         <h2 class="team">Our Team</h2>
         <ul class="team-ul">
             <li class="eam-li">
